chore: fix type declaration missing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "@/*": [
         "src/*"
       ],
-      "typescript-stater/*": [
+      "import-module-runtime/*": [
         "dist/*"
       ]
     }
